--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -1,3 +1,7 @@
+::before ::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #282c34;
