added card template

--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -43,7 +43,9 @@
 .hero {
   background: url(../../../assets/images/pexels-karolina-grabowska-4046753.jpg);
   background-size: cover;
-  height: 100vh;
+  height: 30rem;
+  margin-bottom: 4rem;
+  border-radius: 5px;
 
   justify-content: space-between;
 
