added conditional renders depending on login status

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,14 +2,18 @@
   display: flex;
 
   padding: 0rem 1.5rem;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid black;
 
   & h4:nth-last-child(1) {
     margin-left: 1.5rem;
     font-size: 0.8rem;
   }
-}
 
-a {
-  color: black;
+  &__link {
+    color: black;
+
+    &--flex-end {
+      margin-left: auto;
+    }
+  }
 }
