--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,19 +1,25 @@
 .nav {
   display: flex;
 
-  padding: 0rem 1.5rem;
+  padding: 0rem 2rem;
   border-bottom: 2px solid black;
-
-  & h4:nth-last-child(1) {
-    margin-left: 1.5rem;
-    font-size: 0.8rem;
-  }
 
   &__link {
     color: black;
+    margin-left: 2rem;
+
+    &--remove-margin {
+      margin-left: 0;
+    }
 
     &--flex-end {
       margin-left: auto;
     }
+  }
+
+  &__img {
+    display: block;
+    margin-left: auto;
+    align-self: center;
   }
 }
