--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -13,6 +13,7 @@
   &__title {
     text-align: center;
     margin-top: 0;
+    color: white;
   }
   &__input {
     display: block;
@@ -22,10 +23,11 @@
 
   &__container {
     margin: 0 auto;
-    background: white;
+    background: transparent;
     width: fit-content;
     padding: 2rem;
     border-radius: 10px;
+    border: 3px solid white;
   }
   &__submit {
     background: teal;
@@ -38,6 +40,12 @@
     border: 1px solid black;
     cursor: pointer;
   }
+
+  &__validation {
+    color: red;
+    font-weight: bold;
+    text-align: center;
+  }
 }
 
 .hero {
@@ -45,7 +53,9 @@
   background-size: cover;
   height: 30rem;
   margin-bottom: 4rem;
-
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   justify-content: space-between;
 
   &__container {
