--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -3,12 +3,9 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
   background-color: #f5f5f5;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
