--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,8 @@
 .nav {
   display: flex;
 
-  padding: 0rem 2rem;
+  padding: 1.5rem 2rem;
+  background: #231f20;
   border-bottom: 2px solid black;
 
   &__link {
@@ -21,5 +22,8 @@
     display: block;
     margin-left: auto;
     align-self: center;
+  }
+  & h4 {
+    color: white;
   }
 }
