--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -61,5 +61,10 @@
   &__container {
     width: fit-content;
     margin: 0 auto;
+
+    & > h2 {
+      text-align: center;
+      font-size: 8rem;
+    }
   }
 }
