--- a/src/components/pages/settings-page/Settings.scss
+++ b/src/components/pages/settings-page/Settings.scss
@@ -1,16 +1,45 @@
 .settings {
   &__container {
-    background: white;
     border-radius: 5px;
-    width: 50rem;
+    width: 60%;
     padding: 2rem 0;
     margin: 2rem auto;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
-  &__inner-container {
-    width: fit-content;
-    margin: 0 2rem;
+
+  &__input {
+    display: block;
+  }
+
+  &__file-input {
+    width: 11.5rem;
+    font-size: 14px;
+  }
+
+  &__label {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 0.3rem;
+  }
+
+  &__form {
+    display: flex;
+    align-items: flex-end;
+    width: 100%;
+    padding: 0.8rem 2rem;
+  }
+
+  &__button {
+    height: fit-content;
+    margin-left: auto;
+    color: white;
+    background-color: teal;
+    padding: 6px;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    cursor: pointer;
   }
 }
