--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -1,11 +1,15 @@
-::before ::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  background-color: #f5f5f5;
   margin: 0;
   font-family: monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
