--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,13 +1,13 @@
 .nav {
   display: flex;
-
-  padding: 1.5rem 2rem;
+  align-items: center;
+  padding: 1.2rem 2rem;
   background: #231f20;
-  border-bottom: 2px solid black;
 
   &__link {
     color: black;
     margin-left: 2rem;
+    text-decoration: none;
 
     &--remove-margin {
       margin-left: 0;
@@ -16,14 +16,28 @@
     &--flex-end {
       margin-left: auto;
     }
+
+    &:hover {
+      border-bottom: 1px solid white;
+    }
+    &--user {
+      margin-left: 0.7rem;
+      &:hover {
+        border-bottom: none;
+      }
+    }
   }
 
   &__img {
     display: block;
-    margin-left: auto;
+    border-radius: 50%;
     align-self: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0 0 0 auto;
   }
   & h4 {
     color: white;
+    font-size: 0.8rem;
   }
 }
