--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -8,7 +8,7 @@
 
 body {
   margin: 0;
-  font-family: monospace;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
