--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -22,7 +22,6 @@
   }
 
   &__container {
-    margin: 0 auto;
     background: transparent;
     width: fit-content;
     padding: 2rem;
@@ -52,7 +51,7 @@
   background: url(../../../assets/images/pexels-karolina-grabowska-4046753.jpg);
   background-size: cover;
   height: 30rem;
-  margin-bottom: 4rem;
+  margin-bottom: 32px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -68,5 +67,34 @@
 
       text-shadow: -5px 3px 5px #234d3c;
     }
+  }
+}
+
+.section {
+  display: flex;
+}
+
+.aside {
+  width: 40rem;
+  margin: 2rem 2rem 0 0;
+  padding-bottom: 30px;
+  border-radius: 10px;
+  align-items: center;
+  &__title {
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    margin: 1rem 0;
+  }
+  height: fit-content;
+
+  &__img {
+    width: 7rem;
+    height: 5rem;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+
+  &__container {
+    display: flex;
   }
 }
