--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -1,15 +1,31 @@
 .post {
   &__container {
-    background: white;
     border-radius: 5px;
-    width: 25rem;
-    padding: 2rem 0;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    width: 15rem;
+    padding: 0 0 2rem 0;
+
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+      rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   }
   &__inner-container {
     width: fit-content;
     margin: 0 2rem;
+
+    & > a {
+      color: black;
+      margin: 2rem 0;
+      display: block;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
   }
 }
