--- a/src/components/posts/Posts.scss
+++ b/src/components/posts/Posts.scss
@@ -1,6 +1,17 @@
 .posts {
-  display: flex;
-  justify-content: space-between;
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 2rem;
+  }
 
-  margin: 0 2rem;
+  &__wrapper {
+    padding: 1rem 0;
+    margin: 2rem;
+
+    & > h1 {
+      width: fit-content;
+      font-style: initial;
+    }
+  }
 }
