--- a/src/components/single-post/SinglePost.scss
+++ b/src/components/single-post/SinglePost.scss
@@ -3,14 +3,28 @@
     background: white;
     border-radius: 5px;
     width: 50rem;
-    padding: 2rem 0;
+
     margin: 2rem auto;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
   &__inner-container {
-    width: fit-content;
-    margin: 0 2rem;
+    margin-left: 2rem;
+    & > h3 {
+      margin: 2rem 0;
+    }
+
+    & > p {
+      padding-bottom: 2rem;
+    }
+  }
+
+  &__image {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
   }
 }
