--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -6,10 +6,15 @@
   padding: 0;
 }
 
+html,
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  // background: #f7f7f7;
+
+  min-height: 100%;
+  position: relative;
 }
