--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,1 +1,4 @@
 @use "./partials/resets" as *;
+@use "./partials/variables" as *;
+@use "./partials/mixins" as *;
+@use "./partials/typography" as *;
