--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -50,6 +50,7 @@
 .hero {
   background: url(../../../assets/images/pexels-karolina-grabowska-4046753.jpg);
   background-size: cover;
+
   height: 30rem;
   margin-bottom: 32px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -72,29 +73,51 @@
 
 .section {
   display: flex;
+  flex-direction: row-reverse;
 }
 
 .aside {
   width: 40rem;
-  margin: 2rem 2rem 0 0;
+  margin: 0 2rem 0 0;
   padding-bottom: 30px;
   border-radius: 10px;
   align-items: center;
   &__title {
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
-    margin: 1rem 0;
+    margin: 0 0 1rem 0;
+    text-align: center;
   }
   height: fit-content;
 
   &__img {
     width: 7rem;
-    height: 5rem;
+    height: 100%;
     object-fit: cover;
     border-radius: 5px;
   }
 
   &__container {
     display: flex;
+    margin-top: 2rem;
+    height: 5rem;
+
+    & > a {
+      display: block;
+    }
+  }
+
+  &__inner-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 0.7rem;
+
+    & > h4 {
+    }
+
+    & > p {
+      font-size: 14px;
+    }
   }
 }
