--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -2,7 +2,7 @@
   display: flex;
 
   align-items: center;
-  background: #231f20;
+  background: black;
   padding: 1.2rem 2rem;
   position: absolute;
   left: 0;
