--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,13 +1,19 @@
+@use "../../styles/partials/mixins" as *;
+
 .nav {
   display: flex;
   align-items: center;
   padding: 1.2rem 2rem;
-  background: #231f20;
+  background: black;
 
   &__link {
     color: black;
-    margin-left: 2rem;
+    margin-left: 1.5rem;
     text-decoration: none;
+
+    @include tablet {
+      margin-left: 2rem;
+    }
 
     &--remove-margin {
       margin-left: 0;
@@ -38,6 +44,10 @@
   }
   & h4 {
     color: white;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
+
+    @include tablet {
+      font-size: 0.8rem;
+    }
   }
 }
