--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -1,6 +1,7 @@
+@use "../../../styles/partials/mixins" as *;
+
 .home-page {
   &__title {
-    color: white;
     font-style: italic;
     font-size: 4rem;
     text-align: center;
@@ -13,7 +14,6 @@
   &__title {
     text-align: center;
     margin-top: 0;
-    color: white;
   }
   &__input {
     display: block;
@@ -26,7 +26,7 @@
     width: fit-content;
     padding: 2rem;
     border-radius: 10px;
-    border: 3px solid white;
+    border: 3px solid black;
   }
   &__submit {
     background: teal;
@@ -50,43 +50,77 @@
 .hero {
   background: url(../../../assets/images/pexels-karolina-grabowska-4046753.jpg);
   background-size: cover;
-
+  display: flex;
+  align-items: center;
   height: 30rem;
   margin-bottom: 32px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  justify-content: space-between;
+
+  @include tablet {
+    height: 40vw;
+  }
+
+  &__inner-container {
+    margin-left: 2rem;
+    @include tablet {
+      margin-left: 6rem;
+    }
+
+    & > h2 {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    @include tablet {
+      & > h2 {
+        font-size: 5rem;
+
+        text-shadow: -5px 3px 5px #234d3c;
+      }
+    }
+
+    & > p {
+      font-weight: bold;
+      color: white;
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__button {
+    color: white;
+    background-color: teal;
+    padding: 8px;
+    border: none;
+    border-radius: 10px;
+    font-size: 12px;
+    cursor: pointer;
+  }
 
   &__container {
     width: fit-content;
-    margin: 0 auto;
-
-    & > h2 {
-      text-align: center;
-      font-size: 8rem;
-
-      text-shadow: -5px 3px 5px #234d3c;
-    }
   }
 }
 
 .section {
-  display: flex;
-  flex-direction: row-reverse;
-}
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
 
-.aside {
-  width: 40rem;
-  margin: 0 2rem 0 0;
-  padding-bottom: 30px;
-  border-radius: 10px;
+  @include tablet {
+    display: flex;
+  }
+  justify-content: space-between;
+  margin: 2rem 2rem 2rem 2rem;
+  color: white;
+  padding: 2rem 0 2rem;
   align-items: center;
   &__title {
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
     margin: 0 0 1rem 0;
     text-align: center;
+    color: white;
+    font-size: 1rem;
+
+    @include tablet {
+      font-size: 1.8rem;
+    }
   }
   height: fit-content;
 
@@ -95,12 +129,20 @@
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
+
+    @include desktop {
+      width: 12rem;
+    }
   }
 
   &__container {
     display: flex;
     margin-top: 2rem;
     height: 5rem;
+
+    @include desktop {
+      height: 7rem;
+    }
 
     & > a {
       display: block;
@@ -113,11 +155,28 @@
     justify-content: space-between;
     margin-left: 0.7rem;
 
-    & > h4 {
+    & h4 {
+      font-size: 0.9rem;
+
+      @include tablet {
+        font-size: 1.2rem;
+      }
     }
 
     & > p {
-      font-size: 14px;
+      font-size: 12px;
+
+      @include tablet {
+        font-size: 14px;
+      }
+    }
+  }
+
+  &__wrapper {
+    @include desktop {
+      // padding-left: 14rem;
+      width: 50%;
+      border-right: 1px solid white;
     }
   }
 }
