--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -4,11 +4,16 @@
     width: 20rem;
     padding: 0 0 2rem 0;
 
-    margin-bottom: 2rem;
-    margin-right: 2rem;
+    margin: 2rem 0;
+
     background: white;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
       rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+    & p {
+      font-size: 12px;
+      overflow: hidden;
+    }
   }
   &__inner-container {
     width: fit-content;
@@ -27,5 +32,9 @@
     object-fit: cover;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+  }
+
+  &__title {
+    font-size: 1rem;
   }
 }
