--- a/src/components/posts/Posts.scss
+++ b/src/components/posts/Posts.scss
@@ -1,10 +1,13 @@
-.posts {
-  &__container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 2rem;
+@use "../../styles/partials/mixins" as *;
 
-    width: fit-content;
+.posts {
+  background: black;
+  &__container {
+    border-top: 1px solid white;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 2rem;
   }
 
   &__wrapper {
@@ -20,6 +23,10 @@
   &__title {
     margin: 0 2rem 2rem 2rem;
     text-align: center;
-    border-bottom: 1px solid black;
+    color: white;
+
+    @include tablet {
+      font-size: 1.8rem;
+    }
   }
 }
