--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -11,12 +11,11 @@
 html,
 body {
   margin: 0;
-  font-family: Avenir;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
-  background: #f7f7f7;
-
+  background: black;
   min-height: 100%;
   position: relative;
 }
