--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -1,18 +1,29 @@
+@use "../../styles/partials/mixins" as *;
+
 .post {
   &__container {
     border-radius: 5px;
-    width: 20rem;
+    width: 15rem;
+    height: 22rem;
+    overflow: scroll;
     padding: 0 0 2rem 0;
-
-    margin: 2rem 0;
-
-    background: white;
+    background: #1c1f26;
+    margin: 2rem auto;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
       rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 
+    @include tablet {
+      width: 18rem;
+    }
+
     & p {
       font-size: 12px;
-      overflow: hidden;
+      position: relative;
+      color: white;
+    }
+
+    @include tablet {
+      margin: 2rem 0;
     }
   }
   &__inner-container {
@@ -20,7 +31,7 @@
     margin: 0 2rem;
 
     & > a {
-      color: black;
+      color: white;
       margin: 2rem 0;
       display: block;
     }
