--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,10 +4,8 @@
   display: flex;
   align-items: center;
   padding: 1.2rem 2rem;
-  background: black;
-
+  box-shadow: 0 8px 6px -6px #3f3e3e7e;
   &__link {
-    color: black;
     margin-left: 1.5rem;
     text-decoration: none;
 
@@ -22,9 +20,9 @@
     &--flex-end {
       margin-left: auto;
     }
-
+    border-bottom: 1px solid transparent;
     &:hover {
-      border-bottom: 1px solid white;
+      border-bottom: 1px solid black;
     }
     &--user {
       margin-left: 0.7rem;
@@ -43,11 +41,14 @@
     margin: 0 0 0 auto;
   }
   & h4 {
-    color: white;
     font-size: 0.6rem;
 
     @include tablet {
       font-size: 0.8rem;
     }
+  }
+
+  & a {
+    color: white;
   }
 }
