--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -11,11 +11,12 @@
 html,
 body {
   margin: 0;
+  background: #0e1217;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
-  background: black;
   min-height: 100%;
   position: relative;
 }
