--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -4,7 +4,7 @@
   display: flex;
   border-top: 1px solid grey;
   align-items: center;
-  color: white;
+
   padding: 1.2rem 2rem;
   position: absolute;
   left: 0;
@@ -20,7 +20,7 @@
   }
   & > a {
     display: block;
-    color: white;
+    color: black;
     margin-left: auto;
     font-size: 12px;
 
