--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,14 +1,28 @@
 @use "../../styles/partials/mixins" as *;
 
 .nav {
-  display: flex;
-  align-items: center;
+  @keyframes fade-in {
+    0% {
+      opacity: 0%;
+    }
+
+    100% {
+      opacity: 100%;
+    }
+  }
+
+  position: relative;
+  z-index: 1;
+  background: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
   padding: 1.2rem 2rem;
   box-shadow: 0 8px 6px -6px #3f3e3e7e;
   &__link {
-    margin-left: 1.5rem;
     text-decoration: none;
-
+    display: block;
+    animation: fade-in 1s;
     @include tablet {
       margin-left: 2rem;
     }
@@ -21,14 +35,24 @@
       margin-left: auto;
     }
     border-bottom: 1px solid transparent;
-    &:hover {
-      border-bottom: 1px solid black;
+
+    @include tablet {
+      &:hover {
+        border-bottom: 1px solid black;
+      }
     }
     &--user {
+      font-size: 12.8px;
+      list-style: none;
       margin-left: 0.7rem;
       &:hover {
         border-bottom: none;
       }
+    }
+  }
+  &__hamburger {
+    @include tablet {
+      display: none;
     }
   }
 
@@ -40,15 +64,56 @@
     height: 1.5rem;
     margin: 0 0 0 auto;
   }
-  & h4 {
-    font-size: 0.6rem;
+
+  &__primary-ul {
+    display: none;
+    &--display {
+      padding: 2rem 2rem;
+      display: flex;
+      flex-direction: column;
+
+      // align-items: center;
+      position: absolute;
+      background: white;
+      top: 5.3rem;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+
+      z-index: 2;
+    }
 
     @include tablet {
+      display: none;
+    }
+  }
+  &__primary-list {
+    display: contents;
+    font-size: 1.5rem;
+  }
+
+  &__ul {
+    display: flex;
+    align-items: center;
+  }
+
+  &__list {
+    list-style: none;
+    display: none;
+    @include tablet {
+      display: block;
       font-size: 0.8rem;
     }
   }
 
   & a {
-    color: white;
+    color: black;
+    border-bottom: 1px solid grey;
+    padding: 1rem 0;
+
+    @include tablet {
+      border: none;
+      padding: 0;
+    }
   }
 }
