--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -14,7 +14,7 @@
   &__title {
     text-align: center;
     margin-top: 0;
-    color: white;
+    color: black;
   }
   &__input {
     display: block;
@@ -23,7 +23,8 @@
   }
 
   &__container {
-    background: transparent;
+    background: url(../../../assets/images/pexels-karolina-grabowska-4046753.jpg);
+    background-size: cover;
     width: fit-content;
     padding: 2rem;
     border-radius: 10px;
@@ -49,12 +50,17 @@
 }
 
 .hero {
-  background: url(../../../assets/images/pexels-karolina-grabowska-4046753.jpg);
+  background: url(../../../assets/images/white-cube.png);
   background-size: cover;
+
+  background-color: rgba(250, 0, 0, 0.525);
+  left: 20px;
+  background-blend-mode: darken;
+
   margin: 2rem;
   display: flex;
   align-items: center;
-  height: 30rem;
+  height: 60vw;
   margin-bottom: 32px;
 
   @include tablet {
@@ -62,6 +68,8 @@
   }
 
   &__inner-container {
+    background: transparent;
+    padding: 1rem;
     margin-left: 2rem;
     @include tablet {
       margin-left: 6rem;
@@ -75,7 +83,6 @@
     @include tablet {
       & > h2 {
         font-size: 4rem;
-
         text-shadow: -5px 3px 5px #234d3c;
       }
     }
@@ -88,13 +95,13 @@
 
     & > p {
       font-weight: bold;
-
+      color: white;
       margin-bottom: 1rem;
     }
   }
 
   &__button {
-    color: white;
+    color: black;
     background-color: teal;
     padding: 8px;
     border: none;
@@ -115,21 +122,19 @@
 
 .section {
   @include tablet {
-    display: flex;
+    // display: flex;
   }
-
-  border-top: 1px solid grey;
 
   @include tablet {
     // display: flex;
   }
-  justify-content: space-between;
+
   margin: 2rem 2rem 2rem 2rem;
 
   padding: 2rem 0 2rem;
 
   &__title {
-    color: white;
+    color: black;
     margin: 0 0 1rem 0;
     text-align: center;
     line-height: 0.5;
@@ -174,7 +179,7 @@
 
     & h4 {
       font-size: 0.9rem;
-      color: white;
+      color: black;
 
       @include tablet {
         font-size: 1.2rem;
@@ -183,7 +188,7 @@
 
     & > p {
       font-size: 12px;
-      color: white;
+      color: black;
       @include tablet {
         font-size: 14px;
       }
@@ -191,6 +196,7 @@
   }
 
   &__wrapper {
+    height: fit-content;
     padding: 1rem 0;
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
