--- a/src/components/pages/settings-page/Settings.scss
+++ b/src/components/pages/settings-page/Settings.scss
@@ -11,14 +11,12 @@
     height: 45vw;
   }
   &__container {
+    background: white;
     border-radius: 5px;
-    width: 60%;
     height: fit-content;
     padding: 2rem 0;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+    border: 2px solid grey;
   }
 
   &__input {
@@ -39,7 +37,6 @@
   &__form {
     width: 100%;
     padding: 0.8rem 2rem;
-
     &:nth-of-type(1) {
       border-bottom: 1px solid grey;
 
