--- a/src/components/posts/Posts.scss
+++ b/src/components/posts/Posts.scss
@@ -3,17 +3,20 @@
 .posts {
   align-self: flex-start;
   @include tablet {
-    width: 80%;
+    // width: 80%;
   }
   &__container {
-    border: 2px solid grey;
-    padding: 0 2rem;
-
+    border-top: 1px solid grey;
+    padding: 2rem 2rem 0;
     @include tablet {
       display: flex;
-      justify-content: space-between;
+      gap: 2rem;
+      justify-content: space-around;
       flex-wrap: wrap;
-      margin: 2rem;
+      // margin: 2rem;
+    }
+
+    @include desktop {
     }
   }
 
@@ -31,7 +34,6 @@
   &__title {
     margin: 0 2rem 2rem 2rem;
     text-align: center;
-    color: white;
 
     @include tablet {
       font-size: 1.8rem;
