--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -134,6 +134,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    & > h1 {
+      letter-spacing: 0.3rem;
+      font-weight: 300;
+      font-size: 1.2rem;
+    }
   }
 
   &__list {
