--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -46,7 +46,9 @@
 
   &__validation {
     color: red;
-    font-weight: bold;
+    font-size: 0.8rem;
+    font-weight: 400;
+
     text-align: center;
   }
 }
