email and password form validation added

--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -27,29 +27,65 @@
   }
 
   &__container {
+    margin: 0 auto;
     background-size: cover;
     width: fit-content;
     padding: 2rem;
     border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   }
   &__submit {
     background: teal;
-    width: fit-content;
+    color: white;
+    width: 80%;
     display: block;
     margin: 0 auto;
     margin-top: 1rem;
-    padding: 0.3rem;
-    border-radius: 10px;
+    padding: 0.5rem;
+    border-radius: 5px;
     border: 1px solid black;
     cursor: pointer;
+
+    @include tablet {
+      width: 12rem;
+    }
   }
 
   &__validation {
     color: red;
     font-size: 0.8rem;
     font-weight: 400;
-
     text-align: center;
+
+    &--error {
+      display: block;
+    }
+  }
+
+  &__password-validation {
+    color: red;
+    font-size: 0.8rem;
+    font-weight: 400;
+    display: none;
+    text-align: center;
+
+    &--error {
+      display: block;
+    }
+  }
+
+  &__email-validation {
+    color: red;
+    font-size: 0.8rem;
+    font-weight: 400;
+    display: none;
+    text-align: center;
+
+    &--error {
+      display: block;
+    }
   }
 }
 
