added first page send back to home page after post

--- a/src/components/new-post/NewPost.scss
+++ b/src/components/new-post/NewPost.scss
@@ -4,6 +4,8 @@
   padding: 2rem 0;
   &__image {
     width: 15rem;
+    height: 20rem;
+    object-fit: cover;
     margin: 0 auto;
     display: block;
     border-radius: 5px;
