--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -13,7 +13,6 @@
 .form {
   &__title {
     text-align: center;
-    margin-bottom: 0.5rem;
     color: black;
     font-size: 1.3rem;
     font-weight: 400;
@@ -21,8 +20,8 @@
   &__input {
     display: block;
     border-radius: 5px;
-    width: 12rem;
-    height: 2rem;
+    width: 15rem;
+    height: 2.3rem;
     border: 1px solid black;
   }
 
@@ -38,8 +37,9 @@
   }
   &__submit {
     background: teal;
+    font-size: 1rem;
     color: white;
-    width: 80%;
+    width: 15rem;
     display: block;
     margin: 0 auto;
     margin-top: 1rem;
@@ -47,10 +47,6 @@
     border-radius: 5px;
     border: 1px solid black;
     cursor: pointer;
-
-    @include tablet {
-      width: 12rem;
-    }
   }
 
   &__validation {
@@ -96,7 +92,6 @@
 }
 
 .hero {
-  // background: url(../../../assets/images/hear.png);
   justify-content: center;
   background-size: cover;
   &__image {
@@ -108,27 +103,18 @@
     margin: 0 auto;
     display: block;
   }
-  // background-color: rgba(250, 0, 0, 0.525);
-  left: 20px;
-  background-blend-mode: darken;
 
-  margin: 2rem;
+  margin: 2rem 0;
   display: flex;
   align-items: center;
 
-  margin-bottom: 32px;
-
   @include tablet {
     height: 40vw;
+    margin: 5rem 2rem;
   }
 
   &__inner-container {
     background: transparent;
-    // padding: 1rem;
-    // margin-left: 2rem;
-    // @include tablet {
-    //   margin-left: 6rem;
-    // }
 
     & > h2 {
       font-size: 2rem;
@@ -151,7 +137,7 @@
 
     & > p {
       font-weight: 300;
-      margin-top: 2rem;
+      margin: 4rem 0;
       text-align: center;
     }
   }
@@ -172,7 +158,7 @@
   }
 
   &__container {
-    width: fit-content;
+    width: 100%;
   }
 }
 
@@ -228,6 +214,7 @@
   }
 
   &__inner-container {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -262,6 +249,15 @@
 }
 
 .about-animation {
-  width: 40rem;
+  width: 100%;
   height: 25rem;
+
+  @include tablet {
+    width: 100%;
+    height: 80vh;
+  }
+}
+label {
+  display: block;
+  margin: 0.6rem 0 0.6rem;
 }
