--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -51,10 +51,10 @@
 
   &__validation {
     color: red;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: 400;
     text-align: center;
-    margin: 0.5rem 0;
+    margin: 0.6rem 0 0 0;
 
     &--error {
       display: block;
