--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -46,8 +46,10 @@
   }
 
   &__container {
+    flex: 1 0 0;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
   }
 
   &__link {
@@ -89,6 +91,7 @@
     }
   }
   &__hamburger {
+    flex: 1 0 0;
     position: relative;
     right: 0.9rem;
     height: 50px;
@@ -138,6 +141,9 @@
     align-items: center;
 
     & > h1 {
+      white-space: nowrap;
+      text-align: center;
+      flex: 1 0 0;
       letter-spacing: 0.3rem;
       font-weight: 300;
       font-size: 1rem;
