--- a/src/components/new-post/NewPost.scss
+++ b/src/components/new-post/NewPost.scss
@@ -3,8 +3,8 @@
 .new-post {
   padding: 2rem 0;
   &__image {
-    width: 15rem;
-    height: 20rem;
+    width: 100%;
+    // height: 15rem;
     object-fit: cover;
     margin: 0 auto;
     display: block;
@@ -13,13 +13,17 @@
 
     @include tablet {
       width: 30rem;
+      height: 20rem;
     }
   }
   &__form {
-    width: fit-content;
+    width: 100%;
     margin: 0 auto;
 
     padding: 0 2rem;
+    @include tablet {
+      width: fit-content;
+    }
   }
 
   &__label {
@@ -28,6 +32,7 @@
 
   &__file-input {
     display: block;
+
     width: 11.5rem;
     margin-top: 2rem;
 
@@ -38,7 +43,7 @@
 
   &__input {
     display: block;
-    width: 15rem;
+    width: 100%;
     height: 2rem;
     margin: 0 auto;
     border: 1px solid grey;
@@ -67,11 +72,13 @@
   }
 
   &__button {
+    color: white;
+    font-weight: 600;
     background-color: teal;
-    padding: 8px;
+    padding: 9px;
     border: none;
     border-radius: 10px;
-    font-size: 12px;
+    font-size: 14px;
     cursor: pointer;
 
     @include tablet {
