--- a/src/components/pages/settings-page/Settings.scss
+++ b/src/components/pages/settings-page/Settings.scss
@@ -9,6 +9,9 @@
     height: 45vw;
   }
   &__container {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     width: 70%;
     padding: 1rem;
 
@@ -33,14 +36,14 @@
   &__label {
     font-size: 12px;
     display: block;
-    margin-bottom: 0.3rem;
+    margin: 0 0 0.3rem 0;
   }
 
   &__form {
     width: 100%;
-    padding: 0.8rem 2rem;
+    padding: 0.8rem 1rem;
     &:nth-of-type(1) {
-      border-bottom: 1px solid grey;
+      // border-bottom: 1px solid grey;
 
       @include tablet {
         border-bottom: none;
@@ -56,7 +59,7 @@
   &__button {
     height: fit-content;
     margin: 1.5rem 0 0 auto;
-
+    color: white;
     background-color: teal;
     padding: 6px;
     border: none;
