--- a/src/components/pages/home-page/HomePage.scss
+++ b/src/components/pages/home-page/HomePage.scss
@@ -107,8 +107,8 @@
   }
 
   @include tablet {
-    height: 40vw;
-    margin: 5rem 2rem;
+    // height: 40vw;
+    margin: 0 2rem;
   }
 
   &__inner-container {
@@ -169,9 +169,9 @@
     // display: flex;
   }
 
-  margin: 2rem 2rem 2rem 2rem;
+  margin: 0rem 2rem 2rem 2rem;
 
-  padding: 2rem 0 2rem;
+  padding: 0 0 2rem;
 
   &__title {
     color: black;
@@ -248,11 +248,15 @@
 
 .about-animation {
   width: 100%;
-  height: 25rem;
+  height: 20rem;
 
   @include tablet {
     width: 100%;
-    height: 80vh;
+    height: 30rem;
+  }
+
+  @include desktop {
+    height: 70vh;
   }
 }
 label {
