--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -13,7 +13,7 @@ body {
   margin: 0;
 
   color: black;
-  font-family: Beausite Classic Regular;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
