--- a/src/components/posts/Posts.scss
+++ b/src/components/posts/Posts.scss
@@ -35,8 +35,9 @@
   &__title {
     margin: 0 2rem 0.5rem 2rem;
     border-top: 1px solid grey;
+    border-top-style: dotted;
     padding-top: 1rem;
-
+    text-align: center;
     font-weight: 300;
     @include tablet {
       font-size: 1.5rem;
