--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -45,11 +45,37 @@
     padding: 1.2rem 2rem;
   }
 
+  &--thinner {
+    padding: 0 2rem;
+    @include tablet {
+      padding: 0rem 2rem;
+    }
+  }
+
   &__container {
     flex: 1 0 0;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+  }
+
+  &__logo {
+    display: none;
+
+    @include tablet {
+      display: block;
+    }
+    opacity: 1;
+    &--fade-out {
+      position: relative;
+
+      opacity: 0;
+      transition: opacity 0.6s, top 5s;
+    }
+    &--fade-in {
+      opacity: 1;
+      transition: opacity 0.6s;
+    }
   }
 
   &__link {
