--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -167,7 +167,7 @@
     align-items: center;
 
     & > h1 {
-      color: gold;
+      color: #d8b600;
       white-space: nowrap;
       text-align: center;
       flex: 1 0 0;
