--- a/src/components/posts/Posts.scss
+++ b/src/components/posts/Posts.scss
@@ -34,12 +34,12 @@
 
   &__title {
     letter-spacing: 0.6rem;
-    color: gold;
+    color: #d8b600;
+    text-align: center;
     margin: 0 2rem 0.5rem 2rem;
     border-top: 1px solid grey;
     border-top-style: dotted;
     padding-top: 1rem;
-    font-style: italic;
     font-weight: 600;
     @include tablet {
       font-size: 1.8rem;
