added border to nav

--- a/src/components/posts/Posts.scss
+++ b/src/components/posts/Posts.scss
@@ -34,7 +34,7 @@
 
   &__title {
     letter-spacing: 0.6rem;
-    color: #d8b600;
+    color: #554803;
     text-align: center;
     margin: 0 2rem 0.5rem 2rem;
     border-top: 1px solid grey;
