--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -46,6 +46,7 @@
   }
 
   &--thinner {
+    border-bottom: 1px dotted grey;
     padding: 0 2rem;
     @include tablet {
       padding: 0rem 2rem;
