--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -20,7 +20,6 @@
 
     30% {
       opacity: 0%;
-      // display: hidden;
     }
   }
 
@@ -40,7 +39,6 @@
   width: 100%;
   padding: 0.45rem 2rem;
   background: white;
-  // box-shadow: 0 8px 6px -6px #3f3e3e7e;
   @include tablet {
     padding: 1.2rem 2rem;
   }
@@ -69,7 +67,6 @@
     opacity: 1;
     &--fade-out {
       position: relative;
-
       opacity: 0;
       transition: opacity 0.6s, top 5s;
     }
@@ -131,7 +128,6 @@
     align-self: center;
     width: 1.5rem;
     height: 1.5rem;
-    // margin: 0 0 0 auto;
   }
 
   &__primary-ul {
@@ -142,17 +138,15 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-
     z-index: 2;
     &--display {
       padding: 2rem 2rem;
       display: flex;
       flex-direction: column;
-
-      // align-items: center;
     }
 
     &--nodisplay {
+      z-index: -1;
       opacity: 0;
       transition: opacity 0.5s linear;
     }
@@ -168,7 +162,7 @@
     align-items: center;
 
     & > h1 {
-      color: #d8b600;
+      color: teal;
       white-space: nowrap;
       text-align: center;
       flex: 1 0 0;
